feat: add model field permissions and pivot outer cache